[package]
name = "twetch-sdk"
version = "0.0.1"
authors = ["utxo detective"]
edition = "2021"
categories = ['no-std']

[dependencies]
sigil-sdk = { git = "https://gitlab+deploy-token-1293088:CbuuHtM8BvVpr6FWnhFP@gitlab.com/twetch/sigil-sdk.git", branch = "master" }
sigil_types = { git = "https://gitlab+deploy-token-1293088:CbuuHtM8BvVpr6FWnhFP@gitlab.com/twetch/sigil-sdk.git", branch = "master" }
sigil_store = { git = "https://gitlab+deploy-token-1293088:CbuuHtM8BvVpr6FWnhFP@gitlab.com/twetch/sigil-sdk.git", branch = "master" }
async-trait = "0.1.53"
anyhow = "1"
base64 = "0.13.0"
bsv = { git = "https://github.com/Firaenix/bsv-wasm.git", branch = "master" }
#bsv = { path = "../bsv-wasm" }
hex = "0.4.3"
js-sys = "0.3.53"
regex = "1"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "^1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1"
utf-8 = "0.7.6"
#getrandom = { version = "0.2", features = ["js"] }
#bdk = { version = "0.26.0" }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"]  }
